// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Frame > correct usage > renders custom position 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": "top left",
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio as a string 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio as a string with spaces 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio as an array 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio string using a colon 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio string using a colon and with spaces 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders without ratio 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders default position with incorrect value 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": true,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio if ratio is not correct type 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if array of length <1 provided 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if array of length >2 provided 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if array of not numbers provided 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if ratio string is not correct format 1`] = `
<div
  data-br-frame={true}
  style={
    {
      "--position": undefined,
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;
